# next-gen-ui-agent

./: .env  .gitignore  .gitlab-ci.yml  .isort.cfg  .pants.bootstrap  .pre-commit-config.yaml  CHANGELOG.md  CHART_COMPONENT_INTEGRATION.md  CHART_ENHANCEMENTS_SUMMARY.md  CHART_IMPROVEMENTS.md  CONTRIBUTING.md  LLAMASTACK_DEV.md  NEW_TOOLS_SUMMARY.md  README.md  catalog-info.yaml  cz.toml  get-pants.sh  mkdocs.yml  mypy.ini  pants.ci.toml  pants.toml  pytest.ini  requirements.txt  requirements_dev.txt  run-llamastack-ollama.sh  test_chart_improvements.sh  test_new_tools.sh
libs/next_gen_ui_agent/: BUILD  README.md  __init__.py  agent.py  agent_config.py  agent_config_test.py  agent_config_test.yaml  agent_test.py  all_fields_collector.py  all_fields_collector_test.py  argparse_env_default_action.py  argparse_env_default_action_test.py  array_field_reducer.py  array_field_reducer_test.py  base_renderer.py  component_descriptions.py  component_metadata.py  component_metadata_test.py  component_selection.py  component_selection_chart_instructions.py  component_selection_common.py  component_selection_common_test.py  component_selection_custom_prompts_test.py  component_selection_examples_test.py  component_selection_llm_onestep.py  component_selection_llm_onestep_test.py  component_selection_llm_strategy.py  component_selection_llm_strategy_test.py  component_selection_llm_twostep.py  component_selection_llm_twostep_test.py  component_selection_pertype.py  component_selection_pertype_prompts_test.py  component_selection_pertype_test.py  component_selection_prompts.py  component_selection_test.py  component_selection_twostep.py  data_structure_tools_test.py  data_transformation.py  data_transformation_test.py  datamodel.py  (+15 more)
libs/next_gen_ui_agent/base_renderer/: audio.py  base_renderer.py  chart_line.py  chart_pie.py  image.py  one_card.py  one_card_pluggable_tests.py  one_card_test.py  set_of_cards.py  table.py  types.py  video.py
libs/next_gen_ui_agent/data_transform/: __init__.py  audio.py  chart.py  chart_line.py  chart_pie.py  chart_test.py  data_transformer.py  data_transformer_test.py  data_transformer_utils.py  data_transformer_utils_test.py  data_view.py  hand_build_component.py  hand_build_component_test.py  image.py  image_test.py  one_card.py  one_card_test.py  set_of_cards.py  set_of_cards_test.py  table.py  table_test.py  types.py  video.py  video_test.py
libs/next_gen_ui_patternfly_renderer/: BUILD  README.md  __init__.py  patternfly_renderer.py  patternfly_renderer_one_card_test.py  patternfly_renderer_test.py  pyproject.toml  requirements.txt
(+706 files in other folders)
