[build-system]
requires = ["setuptools", "wheel"] 
build-backend = "setuptools.build_meta" 

[project]
name = "next_gen_ui_agent" 
description = "Empower your UI by AI Agent"
license = {text = "Apache License (2.0)"}
readme = "README.md"

requires-python = ">=3.11"

keywords = ["ai", "ui", "next_gen_ui"]

authors = []
maintainers = []

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/RedHat-UX/next-gen-ui-agent"

